# docx-json

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  COMMANDES.md  INSTRUCTIONS.md  Makefile  README.md  audio_video_test.html.bak  consignes_simple_test.html.bak  convert.py  create_consignes_test.py  create_custom_styles.py  create_sample_doc.py  create_test_doc.py  exemple_blocs_moodle.docx  exemples.md  guide-zarathar.md  md_to_docx.py  moodle-developpement.md  moodle-migration.md  process_consignes.py  pyproject.toml  requirements.txt  run_docx_converter.py  run_docx_json.py  synthese.css  test_consignes.py  test_convert.py  test_create_audio.py  test_docx.html  title_test.py
.cursor/rules/: project-instructions.mdc
docs/code-review/: 00_START_HERE.md  CLEANUP_SUMMARY.md  CODE_REVIEW_INDEX.md  COMPLETE_SESSION_SUMMARY.md  FINAL_COVERAGE_REPORT.md  MYPY_SETUP_HIGH_002.md  README.md  README_CODE_REVIEW.md  SECURITY_FIX_CRIT_001.md  SECURITY_FIX_SUMMARY.md  SESSION_SUMMARY.md  TEST_COVERAGE_IMPROVEMENT_SUMMARY.md  code_review_docx_json_2025_10_03.md
docx_json/: __init__.py  __main__.py  cli.py  convert.py  exceptions.py
docx_json/cli/: __init__.py  arguments.py  batch.py  converter.py  css_command.py  main.py
docx_json/core/: README.md  __init__.py  compatibility.py  converter.py  converter_functions.py  docx_parser.py  html_generator.py  html_renderer.py  json_builder.py  markdown_generator.py  processor.py
docx_json/core/html_renderer/: GUIDE.md  __init__.py  base.py  block.py  component.py  generator.py  image.py  page_break.py  paragraph.py  raw_html.py  table.py  text.py  video.py
docx_json/core/html_renderer/tests/: __init__.py  conftest.py  test_generator.py
docx_json/models/: __init__.py  base.py  containers.py  elements.py  instruction.py  media.py  special.py  text.py
docx_json/utils/: __init__.py  comment_filter.py  consignes_handler.py  css_generator.py  image_utils.py  logging.py
scripts/: carousel-maker-img.py  carousel-maker.py  docx_to_md.py
test_templates/: README.md  basic_styles.md  complete_example.md  components.md  images_links.md  lists_tables.md  local_images.md
tests/: __init__.py  test_cli_converter_batch.py  test_cli_modules.py  test_convert.py  test_docx_converter.py  test_docx_parser.py  test_html_renderer.py  test_markdown_generator.py  test_security_fixes.py  test_utils_modules.py
zarathar/: blog-zarathar.md
